fake tests in PetControllerTests